# vlm-self-reflection-RL

./: .gitignore  CLAUDE.md  experiments.md  pyproject.toml  train_grpo_rw.py  train_self_reflection.py  vlm-self-reflect.code-workspace
docs/: architecture.md  rewards.md  training.md  troubleshooting.md
grpo/: train_critic.py  train_refiner.py
k8s/: deepspeed_zero3.yaml  ds_zero3_config.json  job-build-livr-v2-sources.yaml  job-build-livr-v2.yaml  job-eval-vlmevalkit-blink-base-vanilla-v2-shard1.yaml  job-eval-vlmevalkit-blink-base-vanilla-v2-shard2.yaml  job-eval-vlmevalkit-blink-base-vanilla-v2.yaml  job-eval-vlmevalkit-blink-curriculum-final-v2-shard1-overflow.yaml  job-eval-vlmevalkit-blink-curriculum-final-v2-shard1.yaml  job-eval-vlmevalkit-blink-curriculum-final-v2-shard2-overflow.yaml  job-eval-vlmevalkit-blink-curriculum-final-v2-shard2.yaml  job-eval-vlmevalkit-blink-curriculum-final-v2-tail-overflow.yaml  job-eval-vlmevalkit-blink-no-dapo-k8-ckpt1000-v2-shard1-overflow.yaml  job-eval-vlmevalkit-blink-no-dapo-k8-ckpt1000-v2-shard1.yaml  job-eval-vlmevalkit-blink-no-dapo-k8-ckpt1000-v2-shard2-overflow.yaml  job-eval-vlmevalkit-blink-no-dapo-k8-ckpt1000-v2-shard2.yaml  job-eval-vlmevalkit-blink-no-dapo-k8-ckpt1000-v2-tail-overflow.yaml  job-eval-vlmevalkit-blink-stage2.yaml  job-eval-vlmevalkit-blink-v10-base.yaml  job-eval-vlmevalkit-blink-v10-fixes-v3.yaml  job-eval-vlmevalkit-blink-v10-fixes-v4.yaml  job-grpo-rw-4gpu.yaml  job-profile-livr-difficulty.yaml  job-profile-livr-v2-9k-difficulty.yaml  job-qwen-grpo-35k-from-v2.yaml  job-qwen-grpo-35k.yaml  (+55 more)
(+119 files in other folders)
